# Dilnaz

./: .gitignore  Araştırma Konuları.md  LICENSE  README.md  README.tr.md  benchmark_naz_throughput.py  pyproject.toml
dilnaz/: README.md  requirements.txt
dilnaz/models/: configuration_dil.py  configuration_naz.py  modeling_dil.py  modeling_naz.py
dilnaz/models/common/: __init__.py  latents.py  norms.py
dilnaz/models/dil/: __init__.py  configuration.py  encoder.py  layers.py  (+3 more)
dilnaz/surface/: __init__.py  buckets.py  decode.py  ops.py  packing.py  state.py  types.py
dilnaz/tokenization/: __init__.py  hybrid_surface_vocab.json  hybrid_tokenizer.py
dilnaz/train/: byte_trainer_utils.py  calibrate_dil_normalizer.py  dil_data.py  dilnaz_config.py  interface_dil.py  interface_naz.py  migrate_dil_context_checkpoint.py  naz_data.py  parallel_dil_data.py  train_dil.py  train_dil_decoder.py  train_dil_teacherless_parallel.py  train_dil_writer.py  train_naz.py  train_naz_finetune.py  train_parallel_dil.py  trainer_core.py
scripts/: generate_math_sequence_data.py  mixture_latent_v4_probe.py  naz_attention_benchmark.py  naz_pipeline_benchmark.py  prepare_opus_tr_en.py  train_jsonl_pipeline.ps1
tests/: compare_bge_labse_occurrences.py  subword_merge_gold_template.jsonl  teacher_formula_probe.py  test_compile_runtime.py  test_dil_modeling.py  test_hybrid_tokenizer.py  test_interface_dil.py  test_naz_resident_training.py  test_parallel_dil_training.py  test_parallel_tr_en_encoder_aligner.py  test_subword_merge.py  test_writer_buffer.py  test_writer_render_contract.py
(+41 files in other folders)
